--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+08-Mar-2010 Jean-Marie Simonet
+^ Refactored com_config ini/keys
+
 07-Mar-2010 Mark Dexter
 ^ Implement parameters for com_content frontpage menu item
 
