--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+08-Mar-2010 Christophe Demko
+^ Enhancing language error message display
+
 08-Mar-2010 Jean-Marie Simonet
 ^ Refactored com_config ini/keys
 
