$ Typos in some strings
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15262 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_config.ini
+++ b/administrator/language/en-GB/en-GB.com_config.ini
@@ -100,7 +100,7 @@ COM_CONFIG_FIELD_VALUE_TLS="TTL"
 COM_CONFIG_FIELD_METAAUTHOR_DESC="Show the Author Meta Tag when viewing Articles"
 COM_CONFIG_FIELD_METAAUTHOR_LABEL="Show Author Meta Tag"
 COM_CONFIG_FIELD_METADESC_DESC="Enter a description of the overall Web site that is to be used by search engines. Generally, a maximum of 20 words is optimal."
-COM_CONFIG_FIELD_METADESC_LABEL=Global Site Meta Description
+COM_CONFIG_FIELD_METADESC_LABEL="Global Site Meta Description"
 COM_CONFIG_FIELD_METAKEYS_DESC="Enter the keywords and phrases that best describe your Web site. Separate keywords with a comma and group phrases within single quotations."
 COM_CONFIG_FIELD_METAKEYS_LABEL=Global Site Meta Keywords
 COM_CONFIG_FIELD_METATITLE_DESC="Show the Title Meta Tag when viewing Articles"
