--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -73,8 +73,8 @@ JMODIFY="Modify"
 JGROUPS="Groups"
 JMODIFY="Modify"
 JGROUPS="Groups"
-JMODIFY=Modify
-JGROUPS=Groups
+JMODIFY="Modify"
+JGROUPS="Groups"
 JCLIENT="Client"
 
 JINVALID_TOKEN="The most recent request was denied because it contained an invalid security token. Please refresh the page and try again."
