Enhancing language error message display
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15263 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -10,6 +10,9 @@
 
 ; Common boolean values
 ; Note: YES, NO, TRUE, FALSE are reserved words in INI format.
+JERROR_PARSING_LANGUAGE_FILE="The language file %1$s was not read correctly: error in lines %2$s"
+
+
 JDISABLED="Disabled"
 JENABLED="Enabled"
 
@@ -104,7 +107,6 @@ JSUCCESS_N_ITEMS_TRASHED="%d item(s) successfully trashed."
 JSUCCESS_ORDERING_SAVED="Ordering successfully saved."
 JCONTROLLER_SAVE_SUCCESS="Item successfully saved."
 JCONTROLLER_N_ITEMS_DELETED="%s item(s) successfully deleted."
-ERROR_PARSING_LANGUAGE_FILE="This language file was not read correctly:"
 
 JCOMMON_EDIT_ITEM="Edit item"
 JCOMMON_HIDE="Hide"
