--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -6,6 +6,8 @@
 
 ; Date format
 
+JERROR_PARSING_LANGUAGE_FILE="The language file %1$s was not read correctly: error in lines %2$s"
+
 JNO="No"
 JOFF="Off"
 JON="On"
