--- a/installation/language/en-GB/en-GB.ini
+++ b/installation/language/en-GB/en-GB.ini
@@ -4,6 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
 
+JERROR_PARSING_LANGUAGE_FILE="The language file %1$s was not read correctly: error in lines %2$s"
+
 INSTL_ERROR_DB="Some errors occurred while populating the database: %s"
 
 INSTL_ADMIN_EMAIL_LABEL="Your E-mail"
