Translating name of editors in the JFieldEditors class
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15265 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -28,6 +28,7 @@ $ -> Language fix or change
 ! -> Note
 
 08-Mar-2010 Christophe Demko
+^ Translating name of editors in the JFieldEditors class
 ^ Enhancing language error message display
 
 08-Mar-2010 Jean-Marie Simonet
