Translating cache and session handler names in the JFieldCacheHandler and JFieldSessionHandler
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15267 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -287,6 +287,19 @@ LIBRARIES_FORM_VALIDATOR_RULE_NOT_FOUND="No form rule could be found for field %
 
 CONFIG__DEFAULT="Default Options"
 
+JLIB_VALUE_CACHE_APC="Alternative PHP Cache"
+JLIB_VALUE_CACHE_EACCELERATOR="eAccelerator"
+JLIB_VALUE_CACHE_FILE="File"
+JLIB_VALUE_CACHE_MEMCACHE="Memory cache"
+JLIB_VALUE_CACHE_XCACHE="XCache"
+
+JLIB_VALUE_SESSION_APC="Alternative PHP Cache"
+JLIB_VALUE_SESSION_DATABASE="Database"
+JLIB_VALUE_SESSION_EACCELERATOR="eAccelerator"
+JLIB_VALUE_SESSION_MEMCACHE="Memory cache"
+JLIB_VALUE_SESSION_NONE="None"
+JLIB_VALUE_SESSION_XCACHE="XCache"
+
 ;
 ; Old string format
 ;
