Correcting JHtml::script and JHtml::style and JHtml::image for allowing selection in plugins
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15285 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+09-Mar-2010 Christophe Demko
+# Correcting JHtml::script and JHtml::style and JHtml::image for allowing selection in plugins
+
 08-Mar-2010 Christophe Demko
 ^ Translating cache and session handler names in the JFieldCacheHandler and JFieldSessionHandler
 ^ Translating name of editors in the JFieldEditors class
