$ Typo in string
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15287 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+09-Mar-2010 Jean-Marie Simonet
+$ Typo in string
+
 09-Mar-2010 Christophe Demko
 # Correcting JHtml::script and JHtml::style and JHtml::image for allowing selection in plugins
 
