$ Corrected a bunch of strings. Whitespaces, slashes and periods in Keys. Wrong or absent doublequotes in values.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15294 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/language/en-GB/en-GB.com_contact.ini
+++ b/language/en-GB/en-GB.com_contact.ini
@@ -21,11 +21,9 @@ CONTACTS="Contacts"
 CLOAKING="This e-mail address is being protected from spambots. You need JavaScript enabled to view it."
 CONTACT="Contact"
 COPY_TEXT="This is a copy of the following message you sent to %s via %s"
-COPY OF:="Copy of:"
-DISPLAY NUM="Display #"
-DOWNLOAD INFORMATION AS A="Download information as a"
+COPY_OF="Copy of:"
+DOWNLOAD_INFORMATION_AS="Download information as a"
 CONTACT_EMAIL="E-mail"
-CONTACT_EMAIL ADDRESS="E-mail address"
 CONTACT_EMAIL_A_COPY="E-mail a copy of this message to your own address."
 CONTACT_ENQUIRY="Enquiry"
 CONTACT_ENQUIRY_TEXT="This is an enquiry e-mail via %s from:"
@@ -36,7 +34,7 @@ CONTACT_INFORMATION="Information"
 CONTACT_MAILENQUIRY="%s Enquiry"
 MESGHASBANNEDTEXT="The %s of your e-mail contains banned text."
 MESSAGE="Message"
-MESSAGE SUBJECT="Message Subject"
+COM_CONTACT_MESSAGE_SUBJECT="Message Subject"
 CONTACT_MOBILE="Mobile Phone Number"
 CONTACT_NAME_LABEL="Name"
 CONTACT_POSITION_LABEL="Position"
@@ -47,11 +45,10 @@ CONTACT_SUBJECT_LABEL="Subject"
 CONTACT_SUBURB_LABEL="TOWN/SUBURB"
 CONTACT_TELEPHONE_LABEL="Telephone"
 CONTACT_THANK_MESSAGE="Thank you for your e-mail."
-THANK YOU FOR YOUR E-MAIL="Thank you for your e-mail."
-THE CONTACT LIST FOR THIS WEBSITE.="The Contact list for this Web site."
+THE_CONTACT_LIST_FOR_THIS_WEBSITE="The Contact list for this Web site."
 CONTACT_NO_DETAILS="There are no Contact Details listed."
 CONTACT_VCARD="vCard"
-YOU CANNOT ENTER MORE THAN ONE EMAIL ADDRESS="You cannot enter more than one e-mail address."
+YOU_CANNOT_ENTER_MORE_THAN_ONE_EMAIL_ADDRESS="You cannot enter more than one e-mail address."
 CONTACT_ERROR_CONTACT_NOT_FOUND="Contact could not be read from the database."
 
 COM_CONTACT_CONTACT_EMAIL_ADDRESS="Email"
