--- a/language/xx-XX/xx-XX.com_contact.ini
+++ b/language/xx-XX/xx-XX.com_contact.ini
@@ -20,9 +20,8 @@ CONTACTS="Contacts"
 CLOAKING="This e-mail address is being protected from spambots. You need JavaScript enabled to view it."
 CONTACT="Contact"
 COPY_TEXT="This is a copy of the following message you sent to %s via %s"
-COPY OF:="Copy of:"
-DISPLAY NUM="Display #"
-DOWNLOAD INFORMATION AS A="Download information as a"
+COPY_OF="Copy of:"
+DOWNLOAD_INFORMATION_AS="Download information as a"
 EMAIL="E-mail"
 EMAIL ADDRESS="E-mail address"
 EMAIL_A_COPY="E-mail a copy of this message to your own address."
@@ -35,7 +34,7 @@ INFORMATION="Information"
 MAILENQUIRY="%s Enquiry"
 MESGHASBANNEDTEXT="The %s of your e-mail contains banned text."
 MESSAGE="Message"
-MESSAGE SUBJECT="Message Subject"
+COM_CONTACT_MESSAGE_SUBJECT="Message Subject"
 MOBILE="Mobile Phone Number"
 NAME="Name"
 POSITION="Position"
@@ -45,12 +44,11 @@ SEND="Send"
 SUBJECT="Subject"
 SUBURB="TOWN/SUBURB"
 TELEPHONE="Telephone"
-THANK_MESSAGE="Thank you for your e-mail."
-THANK YOU FOR YOUR E-MAIL="Thank you for your e-mail."
-THE CONTACT LIST FOR THIS WEBSITE.="The Contact list for this Web site."
+CONTACT_THANK_MESSAGE="Thank you for your e-mail."
+THE_CONTACT_LIST_FOR_THIS_WEBSITE="The Contact list for this Web site."
 THERE ARE NO CONTACT DETAILS LISTED.="There are no Contact Details listed."
 VCARD="vCard"
-YOU CANNOT ENTER MORE THAN ONE EMAIL ADDRESS="You cannot enter more than one e-mail address."
+YOU_CANNOT_ENTER_MORE_THAN_ONE_EMAIL_ADDRESS="You cannot enter more than one e-mail address."
 CONTACT_ERROR_CONTACT_NOT_FOUND="Contact could not be read from the database."
 CONTACT_EMAIL_FORM="Send Email"
 COM_CONTACT_CONTACT_REQUIRED="* = Required"
