--- a/language/xx-XX/xx-XX.com_messages.ini
+++ b/language/xx-XX/xx-XX.com_messages.ini
@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-A NEW PRIVATE MESSAGE HAS ARRIVED="A new private message has arrived from %s."
+A_NEW_PRIVATE_MESSAGE_HAS_ARRIVED="A new private message has arrived from %s."
 MESSAGE_FAILED="The user has locked their mailbox. Message failed."
 PLEASE LOGIN TO READ YOUR MESSAGE="Please login to %s to read your message."
