--- a/administrator/language/en-GB/en-GB.com_contact.ini
+++ b/administrator/language/en-GB/en-GB.com_contact.ini
@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_CONTACT="Contacts"
-Com_CONTACT_XML_DESCRIPTION="This component shows a listing of Contact Information"
+COM_CONTACT_XML_DESCRIPTION="This component shows a listing of Contact Information"
 
 EDIT_CONTACT="Edit Contact"
 ADD_NEW_CONTACT="Add New Contact"
@@ -202,14 +202,14 @@ CONTACT_PARAMS_FAX_DESC="Show or Hide fax number"
 CONTACT_PARAMS_IMAGE_DESC="Show or Hide contact image"
 CONTACT_PARAMS_MISC_INFO_DESC="Show or Hide miscellaneous information"
 CONTACT_PARAMS_MOBILE_DESC="Show or Hide mobile number"
-CONTACT_PARAMS_POST/ZIP_CODE_DESC="Show or Hide postal or zip code"
-CONTACT_PARAMS_POST/ZIP_CODE_LABEL="Postal Code"
-CONTACT_PARAMS_STATE/COUNTY_DESC="Show or Hide state or county"
-CONTACT_PARAMS_STATE/COUNTY_LABEL="State or County"
+CONTACT_PARAMS_POST-ZIP_CODE_DESC="Show or Hide postal or zip code"
+CONTACT_PARAMS_POST-ZIP_CODE_LABEL="Postal Code"
+CONTACT_PARAMS_STATE-COUNTY_DESC="Show or Hide state or county"
+CONTACT_PARAMS_STATE-COUNTY_LABEL="State or County"
 CONTACT_PARAMS_STREET_ADDRESS_DESC="Show or Hide street address"
 CONTACT_PARAMS_TELEPHONE_DESC="Show or Hide telephone number"
-CONTACT_PARAMS_TOWN/SUBURB_DESC="Show or hide city or suburb"
-CONTACT_PARAMS_TOWN/SUBURB_LABEL="City or Suburb"
+CONTACT_PARAMS_TOWN-SUBURB_DESC="Show or hide city or suburb"
+CONTACT_PARAMS_TOWN-SUBURB_LABEL="City or Suburb"
 CONTACT_PARAMS_VCARD_DESC="Whether or not to allow export to Vcard format"
 CONTACT_PARAMS_WEBPAGE_DESC="Show or hide webpage"
 CONTACT_PARAMS_CONTACT_EMAIL_DESC="Show or Hide contact email"
@@ -223,7 +223,7 @@ CONTACT_ARTICLES_SHOW_DESC="If this contact is mapped to a user, and if this is 
 CONTACT_PROFILE_SHOW_LABEL="Show Profile"
 CONTACT_PROFILE_SHOW_DESC="If this contact is mapped to a user, and if this is set to Show, then the profile of this user will show."
 CONTACT_CONFIG_REDIRECT_LABEL="Contact Redirect"
-CONTACT_CONFIG_REDIRECT_DESC=CONTACT_CONFIG_REDIRECT_DESC
+CONTACT_CONFIG_REDIRECT_DESC="Contact Redirect desc"
 CONTACT_SELECT_A_CONTACT="Select a Contact"
 CONTACT_EMAIL_REDIRECT_LABEL="Contact Redirect"
 CONTACT_EMAIL_REDIRECT_DESC="Contact Redirect description"
