--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 09-Mar-2010 Jean-Marie Simonet
 $ Typo in string
+$ Corrected a bunch of strings. Whitespaces, slashes and periods in Keys. Wrong or absent doublequotes in values.
 
 09-Mar-2010 Christophe Demko
 # Correcting JHtml::script and JHtml::style and JHtml::image for allowing selection in plugins
