--- a/language/en-GB/en-GB.com_newsfeeds.ini
+++ b/language/en-GB/en-GB.com_newsfeeds.ini
@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-COM_NEWSFEEDS_DEFAULT_PAGE_TITLE=News Feeds"
+COM_NEWSFEEDS_DEFAULT_PAGE_TITLE="News Feeds"
 COM_NEWSFEEDS_DISPLAY_NUM="Display #"
 COM_NEWSFEEDS_ERRORS_CATEGORY_NOT_FOUND="Category not found"
 COM_NEWSFEEDS_ERRORS_FEED_NOT_RETRIEVED="Error. Feed could not be retrieved."
