$ Standardized com_admin ini/keys
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15299 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -33,6 +33,7 @@ $ -> Language fix or change
 09-Mar-2010 Jean-Marie Simonet
 $ Typo in string
 $ Corrected a bunch of strings. Whitespaces, slashes and periods in Keys. Wrong or absent doublequotes in values.
+$ Standardized com_admin ini/keys
 
 09-Mar-2010 Christophe Demko
 # Correcting a bug in parse_ini_file for php >= 5.3.1
