--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -79,6 +79,8 @@ JGROUPS="Groups"
 JMODIFY="Modify"
 JGROUPS="Groups"
 JCLIENT="Client"
+JCANCEL="Cancel"
+JSUBMIT="Submit"
 
 JINVALID_TOKEN="The most recent request was denied because it contained an invalid security token. Please refresh the page and try again."
 JERROR_ALERTNOAUTHOR="You are not authorised to view this resource."
