$ Refactored com_banners inis/keys customizing item(s)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15314 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -276,7 +276,7 @@ JTOOLBAR_SAVE_AND_NEW="Save &amp; New"
 JTOOLBAR_SAVE_AS_COPY="Save as Copy"
 JTOOLBAR_UNINSTALL="Uninstall"
 JTOOLBAR_UNPUBLISH="Unpublish"
-JTOOLBAR_TRASH="Delete"
+JTOOLBAR_TRASH="Trash"
 
 JBROWSERTARGET_MODAL="Modal"
 JBROWSERTARGET_NEW="Open in new window"
