--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-Mar-2010 Jean-Marie Simonet
+$ Refactored com_banners inis/keys customizing item(s)
+
 10-Mar-2010 Christophe Demko
 # Correction of a bug in JLanguage for php > 5.3.1
 
