$^ Customized ini/keys item(s) com_newfeeds, com_templates, com_weblinks
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15335 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_templates.ini
+++ b/administrator/language/en-GB/en-GB.com_templates.ini
@@ -69,6 +69,11 @@ COM_TEMPLATES_TEMPLATE_MASTER_FILES="Template Master Files"
 COM_TEMPLATES_TEMPLATES_FILTER_CLIENT="Client"
 COM_TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC="Search in template name or folder name."
 
+; controller
+COM_TEMPLATES_NO_TEMPLATE_SELECTED="No template selected"
+COM_TEMPLATES_TEMPLATE_DELETED="Template successfully deleted"
+COM_TEMPLATES_N_TEMPLATES_DELETED="%d templates successfully deleted"
+
 ; not used as of March 4th 2010
 COM_TEMPLATES_TEMPLATE_DELETE_ERROR="Delete"
 COM_TEMPLATES_TEMPLATE_ADD_PRINTVIEW="Add custom print view template (recommended)"
