--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -257,6 +257,7 @@ JTOOLBAR_ARCHIVE="Archive"
 JTOOLBAR_CANCEL="Cancel"
 JTOOLBAR_CLOSE="Close"
 JTOOLBAR_DEFAULT="Default"
+JTOOLBAR_DELETE="Delete"
 JTOOLBAR_DISABLE="Disable"
 JTOOLBAR_DUPLICATE="Duplicate"
 JTOOLBAR_EDIT="Edit"
