--- a/administrator/language/en-GB/en-GB.com_newsfeeds.ini
+++ b/administrator/language/en-GB/en-GB.com_newsfeeds.ini
@@ -78,3 +78,16 @@ COM_NEWSFEEDS_SUBMENU_NEWSFEEDS="News Feeds"
 COM_NEWSFEEDS_XML_DESCRIPTION="This component manages RSS/RDF newsfeeds"
 COM_NEWSFEEDS="Newsfeeds"
 JFIELD_NEWSFEED_LANGUAGE_DESC="Assign a language to this News Feed."
+
+; controller
+COM_NEWSFEEDS_NEWSFEED_DELETED="Newsfeed successfully deleted"
+COM_NEWSFEEDS_N_NEWSFEEDS_DELETED="%d newsfeeds successfully deleted"
+COM_NEWSFEEDS_NO_NEWSFEEDS_SELECTED="No newsfeeds selected"
+COM_NEWSFEEDS_NEWSFEED_PUBLISHED="Newsfeed successfully published"
+COM_NEWSFEEDS_N_NEWSFEEDS_PUBLISHED="%d newsfeeds successfully published"
+COM_NEWSFEEDS_NEWSFEED_UNPUBLISHED="Newsfeed successfully unpublished"
+COM_NEWSFEEDS_N_NEWSFEEDS_UNPUBLISHED="%d newsfeeds successfully unpublished"
+COM_NEWSFEEDS_NEWSFEED_ARCHIVED="Newsfeed successfully archived"
+COM_NEWSFEEDS_N_NEWSFEEDS_ARCHIVED="%d newsfeeds successfully archived"
+COM_NEWSFEEDS_NEWSFEED_TRASHED="Newsfeed successfully trashed"
+COM_NEWSFEEDS_N_NEWSFEEDS_TRASHED="%d newsfeeds successfully trashed"
