--- a/administrator/language/en-GB/en-GB.com_weblinks.ini
+++ b/administrator/language/en-GB/en-GB.com_weblinks.ini
@@ -79,4 +79,17 @@ COM_WEBLINKS_ERR_TABLES_PROVIDE_URL="Please provide a valid URL"
 COM_WEBLINKS_ERR_TABLES_TITLE="Your Weblink must contain a title."
 COM_WEBLINKS_ERR_TABLES_NAME="Web Link"
 
+; controller
+COM_WEBLINKS_NO_WEBLINK_SELECTED="No weblinks selected"
+COM_WEBLINKS_WEBLINK_DELETED="Weblink successfully deleted"
+COM_WEBLINKS_N_WEBLINKS_DELETED="%d weblinks successfully deleted"
+COM_WEBLINKS_WEBLINK_PUBLISHED="Weblink successfully published"
+COM_WEBLINKS_N_WEBLINKS_PUBLISHED="%d weblinks successfully published"
+COM_WEBLINKS_WEBLINK_UNPUBLISHED="Weblink successfully unpublished"
+COM_WEBLINKS_N_WEBLINKS_UNPUBLISHED="%d weblinks successfully unpublished"
+COM_WEBLINKS_WEBLINK_ARCHIVED="Weblink successfully archived"
+COM_WEBLINKS_N_WEBLINKS_ARCHIVED="%d weblinks successfully archived"
+COM_WEBLINKS_WEBLINK_TRASHED="Weblink successfully trashed"
+COM_WEBLINKS_N_WEBLINKS_TRASHED="%d weblinks successfully trashed"
+
 COM_WEBLINKS_XML_DESCRIPTION="This component shows a listing of Weblinks"
