$^# Refactored com_messages ini/keys, customized item(s)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15339 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+12-Mar-2010 Jean-Marie Simonet
+$^# Refactored com_messages ini/keys, customized item(s)
+
 11-Mar-2010 Jean-Marie Simonet
 $^ Customized ini/keys item(s) com_newfeeds, com_templates, com_weblinks
 
