--- a/administrator/language/en-GB/en-GB.com_messages.ini
+++ b/administrator/language/en-GB/en-GB.com_messages.ini
@@ -7,48 +7,65 @@
 COM_MESSAGES="Messaging"
 COM_MESSAGES_XML_DESCRIPTION="Component for private messaging support in backend"
 
-MESSAGES_MANAGER_MESSAGES="Private Messages Manager: Messages"
+; views
+COM_MESSAGES_FIELD_DATE_TIME_LABEL="Posted"
+COM_MESSAGES_FIELD_USER_ID_FROM_LABEL="From"
+COM_MESSAGES_HEADING_DATE="Date"
+COM_MESSAGES_HEADING_FROM="From"
+COM_MESSAGES_HEADING_READ="Read"
+COM_MESSAGES_HEADING_SUBJECT="Subject"
+COM_MESSAGES_MANAGER_MESSAGES="Private Messages Manager: Messages"
+COM_MESSAGES_MY_SETTINGS="My Settings"
+COM_MESSAGES_OPTION_PUBLISH="Mark as Read"
+COM_MESSAGES_OPTION_READ="Read"
+COM_MESSAGES_OPTION_SELECT_STATE="- Select State -"
+COM_MESSAGES_OPTION_UNPUBLISH="Mark as Unread"
+COM_MESSAGES_OPTION_UNREAD="Unread"
+COM_MESSAGES_READ_PRIVATE_MESSAGE="Read Private Message"
+COM_MESSAGES_SEARCH_IN_SUBJECT="Search in message subject or description "
+COM_MESSAGES_TOOLBAR_MY_SETTINGS="My Settings"
+COM_MESSAGES_TOOLBAR_PUBLISH="Mark As Read"
+COM_MESSAGES_TOOLBAR_REPLY="Reply"
+COM_MESSAGES_TOOLBAR_SEND="Send"
+COM_MESSAGES_TOOLBAR_UNPUBLISH="Mark as Unread"
+COM_MESSAGES_VIEW_PRIVATE_MESSAGE="Private Messages Manager: View Message"
+COM_MESSAGES_WRITE_PRIVATE_MESSAGE="Write Private Message"
 
-MESSAGES_HEADING_DATE="Date"
-MESSAGES_HEADING_FROM="From"
-MESSAGES_HEADING_READ="Read"
-MESSAGES_HEADING_SUBJECT="Subject"
+; models 
+COM_MESSAGES_ERR_INVALID_USER="Invalid user"
+COM_MESSAGES_ERR_SEND_FAILED="The user has locked their mailbox. Message failed."
+COM_MESSAGES_FIELD_AUTO_PURGE_DESC="Automatically purge private messages after the given number of days."
+COM_MESSAGES_FIELD_AUTO_PURGE_LABEL="Auto-purge Messages (days)"
+COM_MESSAGES_FIELD_LOCK_DESC="Lock your private message inbox."
+COM_MESSAGES_FIELD_LOCK_LABEL="Lock Inbox"
+COM_MESSAGES_FIELD_MAIL_ON_NEW_DESC="Email me when a new private message arrives."
+COM_MESSAGES_FIELD_MAIL_ON_NEW_LABEL="Email New Messages"
+COM_MESSAGES_FIELD_MESSAGE_DESC="You must enter a message."
+COM_MESSAGES_FIELD_MESSAGE_LABEL="Message"
+COM_MESSAGES_FIELD_SUBJECT_DESC="You must enter a subject."
+COM_MESSAGES_FIELD_SUBJECT_LABEL="Subject"
+COM_MESSAGES_FIELD_USER_ID_TO_DESC="You must select a recipient."
+COM_MESSAGES_FIELD_USER_ID_TO_LABEL="Recipient"
+COM_MESSAGES_NEW_MESSAGE_ARRIVED="A new private message has arrived from %s"
+COM_MESSAGES_PLEASE_LOGIN="Please log in to %s to read your message."
+COM_MESSAGES_RE="Re:"
 
-MESSAGES_OPTION_READ="Read"
-MESSAGES_OPTION_UNREAD="Unread"
+; tables
+COM_MESSAGES_ERROR_INVALID_FROM_USER="Invalid sender"
+COM_MESSAGES_ERROR_INVALID_MESSAGE="Invalid message content"
+COM_MESSAGES_ERROR_INVALID_SUBJECT="Invalid subject"
+COM_MESSAGES_ERROR_INVALID_TO_USER="Invalid recipient"
 
-MESSAGES_SEARCH_IN_SUBJECT="Search in message subject or description "
-MESSAGES_OPTION_SELECT_STATE="- Select State -"
-
-MESSAGES_TOOLBAR_MY_SETTINGS="My Settings"
-MESSAGES_TOOLBAR_SEND="Send"
-MESSAGES_TOOLBAR_REPLY="Reply"
-MESSAGES_TOOLBAR_PUBLISH="Mark As Read"
-MESSAGES_TOOLBAR_UNPUBLISH="Mark Unread"
-
-MESSAGES_MY_SETTINGS="My Settings"
-MESSAGES_FIELD_AUTO_PURGE_DESC="Automatically purge private messages after the given number of days."
-MESSAGES_FIELD_AUTO_PURGE_LABEL="Auto-purge Messages (days)"
-MESSAGES_FIELD_LOCK_DESC="Lock your private message inbox."
-MESSAGES_FIELD_LOCK_LABEL="Lock Inbox"
-MESSAGES_FIELD_MAIL_ON_NEW_DESC="Email me when a new private message arrives."
-MESSAGES_FIELD_MAIL_ON_NEW_LABEL="Email New Messages"
-
-MESSAGES_FIELD_MESSAGE_DESC="Message Desc"
-MESSAGES_FIELD_MESSAGE_LABEL="Message"
-MESSAGES_FIELD_SUBECT_DESC="Subect Desc"
-MESSAGES_FIELD_SUBJECT_LABEL="Subject"
-MESSAGES_FIELD_USER_ID_TO_DESC="User id to Desc"
-MESSAGES_FIELD_USER_ID_TO_LABEL="User id to"
-
-MESSAGES_WRITE_PRIVATE_MESSAGE="Write Private Message"
-MESSAGES_READ_PRIVATE_MESSAGE="Read Private Message"
-
-MESSAGES_FIELD_DATE_TIME_LABEL="Posted"
-MESSAGES_FIELD_USER_ID_FROM_LABEL="From"
-
-MESSAGES_VIEW_PRIVATE_MESSAGE="Private Messages Manager: View Message"
-MESSAGES_RE="Re:"
-
-MESSAGES_PUBLISH_ITEM="Mark as Read"
-MESSAGES_UNPUBLISH_ITEM="Mark Unread"
+; controllers
+COM_MESSAGES_ERR_SEND_FAILED="Could not send message. Error: %s"
+COM_MESSAGES_CONFIG_SAVED="Configuration successfully saved"
+COM_MESSAGES_INVALID_REPLY_ID="Invalid recipient"
+COM_MESSAGES_MESSAGE_DELETED="Message successfully deleted"
+COM_MESSAGES_N_MESSAGES_DELETED="%d messages successfully deleted"
+COM_MESSAGES_NO_MESSAGES_SELECTED="No messages selected"
+COM_MESSAGES_MESSAGE_PUBLISHED="Message successfully marked as read"
+COM_MESSAGES_N_MESSAGES_PUBLISHED="%d messages successfully marked as read"
+COM_MESSAGES_MESSAGE_UNPUBLISHED="Message successfully marked as unread"
+COM_MESSAGES_N_MESSAGES_UNPUBLISHED="%d messages successfully marked as unread"
+COM_MESSAGES_MESSAGE_TRASHED="Message successfully trashed"
+COM_MESSAGES_N_MESSAGES_TRASHED="%d messages successfully trashed"
