--- a/language/en-GB/en-GB.com_messages.ini
+++ b/language/en-GB/en-GB.com_messages.ini
@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-A_NEW_PRIVATE_MESSAGE_HAS_ARRIVED="A new private message has arrived from %s."
-MESSAGE_FAILED="The user has locked their mailbox. Message failed."
-PLEASE_LOGIN_TO_READ_YOUR_MESSAGE="Please login to %s to read your message."
+COM_MESSAGES_NEW_MESSAGE_ARRIVED="A new private message has arrived from %s"
+COM_MESSAGES_PLEASE_LOGIN="Please log in to %s to read your message."
+COM_MESSAGES_ERR_SEND_FAILED="The user has locked their mailbox. Message failed."
