$^ Corrected string from last commit
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15340 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_messages.ini
+++ b/administrator/language/en-GB/en-GB.com_messages.ini
@@ -57,7 +57,7 @@ COM_MESSAGES_ERROR_INVALID_SUBJECT="Invalid subject"
 COM_MESSAGES_ERROR_INVALID_TO_USER="Invalid recipient"
 
 ; controllers
-COM_MESSAGES_ERR_SEND_FAILED="Could not send message. Error: %s"
+JERROR_SAVE_FAILED="Could not send message. Error: %s"
 COM_MESSAGES_CONFIG_SAVED="Configuration successfully saved"
 COM_MESSAGES_INVALID_REPLY_ID="Invalid recipient"
 COM_MESSAGES_MESSAGE_DELETED="Message successfully deleted"
