$ Customizing JCONTROLLER_SAVE_SUCCESS
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15341 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_content.ini
+++ b/administrator/language/en-GB/en-GB.com_content.ini
@@ -84,6 +84,7 @@ CONTENT_ARTICLETEXT_DESC="CONTENT_ARTICLETEXT_DESC"
 
 CONTENT_BLOG_USE_ARTICLE="Use Article"
 
+JCONTROLLER_SAVE_SUCCESS="Article successfully saved"
 
 
 
