--- a/administrator/language/en-GB/en-GB.com_menus.ini
+++ b/administrator/language/en-GB/en-GB.com_menus.ini
@@ -144,5 +144,6 @@ MENUS_HEADING_EDIT_LINK="Edit Settings"
 MENUS_ADVANCED_MENU_OPTIONS="Advanced Menu Options"
 COM_MENU_ITEM_MODULE_ASSIGNMENT="Module Assignment"
 
-
 MENUS_MENU_TYPE_NOT_ALLOWED="This is a reserved menutype."
+JCONTROLLER_SAVE_SUCCESS="Menu successfully saved"
+
