--- a/administrator/language/en-GB/en-GB.com_contact.ini
+++ b/administrator/language/en-GB/en-GB.com_contact.ini
@@ -238,7 +238,6 @@ CONTACT_SORTNAME2_LABEL="Second Sort Field"
 CONTACT_SORTNAME2_DESC="The part of the name to use as the second sort field"
 CONTACT_SORTNAME3_DESC="The part of the name to use as the third sort field"
 CONTACT_SORTNAME3_LABEL="Third Sort Field"
-JFIELD_CONTACT_LANGUAGE_DESC="Language for this contact"
 CONTACT_EDIT_CONTACT="Edit"
 CONTACT_EMAIL_FORM_DETAILS="Details"
 CONTACT_CONTACT_SHOW_CATEGORY_DESC="If &quot;Hide&quot;, the Contact Category will not show. If &quot;Show Without Link&quot;, Category will show as text. If &quot;Show With Link&quot;, Category will show as a link to a Single Category Menu Item."
@@ -251,3 +250,6 @@ CONTACT_CONFIG_STATE_DESC="Enter the state for the contact."
 CONTACT_CONFIG_STATE_LABEL="State"
 CONTACT_CONFIG_SUBURB_DESC="Enter the city or suburb for the contact."
 CONTACT_CONFIG_SUBURB_LABEL="City or Suburb"
+JCONTROLLER_SAVE_SUCCESS="Contact successfully saved"
+JFIELD_CONTACT_LANGUAGE_DESC="Language for this contact"
+
