--- a/administrator/language/en-GB/en-GB.com_templates.ini
+++ b/administrator/language/en-GB/en-GB.com_templates.ini
@@ -88,3 +88,4 @@ COM_TEMPLATES_FTP_DESC="???"
 COM_TEMPLATES_FIELD_FTP_USERNAME_LABEL="User name"
 COM_TEMPLATES_FIELD_FTP_PASSWORD_LABEL="Password"
 
+JCONTROLLER_SAVE_SUCCESS="Style successfully saved"
