Added new methods to SeleniumJoomlaTestCase (from Matt Thomas)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15349 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+12-Mar 2010 Mark Dexter
+^ Added new methods to SeleniumJoomlaTestCase (from Matt Thomas)
+
 03-Mar-2010 Mark Dexter
 # Fix doInstall.php to reflect SeleniumJoomlaTestCase changes
 
