# Fixed mod_menu (Frontend) parameters
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15351 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Mar-2010 Hannes Papenberg
+# Fixed mod_menu (Frontend) parameters
+
 12-Mar-2010 Jean-Marie Simonet
 $^# Refactored com_messages ini/keys, customized item(s)
 $ Customizing JCONTROLLER_SAVE_SUCCESS
