$^ Refactored com_modules ini/keys, customized item(s)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15353 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/xx-XX/xx-XX.com_modules.ini
+++ b/administrator/language/xx-XX/xx-XX.com_modules.ini
@@ -42,10 +42,13 @@ MODULES_FIELD_TITLE_LABEL="Title"
 MODULES_FIELD_CLIENT_ID_DESC="The type of the module, whether it is for the frontend or backend. You cannot change this value for the module."
 MODULES_FIELD_CLIENT_ID_LABEL="Type of Module"
 
-MODULES_FIELD_CACHING_DESC="Select whether to cache the content of this module"
-MODULES_FIELD_CACHING_LABEL="Caching"
-MODULES_FIELD_MODULECLASS_SFX_DESC="A suffix to be applied to the CSS class of the module. This allows for individual module styling."
-MODULES_FIELD_MODULECLASS_SFX_LABEL="Module Class Suffix"
+COM_MODULES_FIELD_CACHING_DESC="Select whether to cache the content of this module"
+COM_MODULES_FIELD_CACHING_LABEL="Caching"
+COM_MODULES_FIELD_CACHE_TIME_LABEL="Cache time"
+COM_MODULES_FIELD_CACHE_TIME_DESC="The time before the module is recached"
+COM_MODULES_FIELD_MODULECLASS_SFX_DESC="A suffix to be applied to the CSS class of the module. This allows for individual module styling."
+COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Module Class Suffix"
+COM_MODULES_FIELD_VALUE_NOCACHING="No caching"
 
 MODULES_MENU_ASSIGNMENT="Menu Assignment"
 MODULES_MODULE_ASSIGN="Module Assignment"
