--- a/language/en-GB/en-GB.com_content.ini
+++ b/language/en-GB/en-GB.com_content.ini
@@ -8,6 +8,7 @@
 ;New strings
 CONTENT_CATEGORY="Category: %s"
 CONTENT_PARENT="Parent Category: %s"
+COM_CONTENT_ARTICLE_SAVE_SUCCESS="Article successfully saved"
 
 ;Old strings
 ACCESS_LEVEL="Access Level"
