--- a/administrator/language/en-GB/en-GB.com_modules.ini
+++ b/administrator/language/en-GB/en-GB.com_modules.ini
@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MODULES="Modules Manager"
-COM_MODULES_XML_DESCRIPTION="Componet for module managment in backend"
+COM_MODULES_XML_DESCRIPTION="Component for module managment in backend"
 
 COM_MODULES_CONFIGURATION="Module Manager Options"
 CONFIG_ADVANCED="Advanced configuration"
@@ -31,50 +31,68 @@ COM_MODULES_NODESCRIPTION="No description available"
 COM_MODULES_OPTION_ADMINISTRATOR="Administrator"
 COM_MODULES_OPTION_SITE="Site"
 
+; controllers
+COM_MODULES_ERROR_INVALID_EXTENSION="Invalid module"
+COM_MODULES_ERROR_NO_MODULES_SELECTED="No module selected"
+COM_MODULES_MODULE_DUPLICATED="Module successfully duplicated"
+COM_MODULES_N_MODULES_DUPLICATED="%d modules successfully duplicated"
+COM_MODULES_MODULE_DELETED="Module successfully deleted"
+COM_MODULES_N_MODULES_DELETED="%d modules successfully deleted"
+COM_MODULES_MODULE_PUBLISHED="Module successfully published"
+COM_MODULES_N_MODULES_PUBLISHED="%d modules successfully published"
+COM_MODULES_MODULE_UNPUBLISHED="Module successfully unpublished"
+COM_MODULES_N_MODULES_UNPUBLISHED="%d modules successfully unpublished"
+COM_MODULES_MODULE_ARCHIVED="Module successfully archived"
+COM_MODULES_N_MODULES_ARCHIVED="%d modules successfully archived"
+COM_MODULES_MODULE_TRASHED="Module successfully trashed"
+COM_MODULES_N_MODULES_TRASHED="%d modules successfully trashed"
+
 ; Edit module fields
 
-MODULES_OPTION_MENU_ALL="On all pages"
-MODULES_OPTION_MENU_EXCLUDE="On all pages except those selected"
-MODULES_OPTION_MENU_INCLUDE="Only on the pages selected"
-MODULES_OPTION_MENU_NONE="On no pages"
-MODULES_OPTION_ORDER_POSITION="%d. %s"
+COM_MODULES_OPTION_MENU_ALL="On all pages"
+COM_MODULES_OPTION_MENU_EXCLUDE="On all pages except those selected"
+COM_MODULES_OPTION_MENU_INCLUDE="Only on the pages selected"
+COM_MODULES_OPTION_MENU_NONE="On no pages"
+COM_MODULES_OPTION_ORDER_POSITION="%d. %s"
 
-MODULES_FIELD_MODULE_DESC="Module Desc"
-MODULES_FIELD_MODULE_LABEL="Module"
-MODULES_FIELD_POSITION_DESC="You may select a module position from the dropdown box of pre-defined positions or enter your own module position by typing in the name."
-MODULES_FIELD_POSITION_LABEL="Position"
-MODULES_FIELD_SHOWTITLE_DESC="Showtitle Desc"
-MODULES_FIELD_SHOWTITLE_LABEL="Show Title"
-MODULES_FIELD_TITLE_DESC="Title Desc"
-MODULES_FIELD_TITLE_LABEL="Title"
-MODULES_FIELD_NOTE_DESC="Note Desc"
-MODULES_FIELD_NOTE_LABEL="Note"
-MODULES_FIELD_CLIENT_ID_DESC="The type of the module, whether it is for the front-end or back-end. You cannot change this value for the module."
-MODULES_FIELD_CLIENT_ID_LABEL="Type of Module"
+COM_MODULES_FIELD_MODULE_DESC="Module type"
+COM_MODULES_FIELD_MODULE_LABEL="Module"
+COM_MODULES_FIELD_POSITION_DESC="You may select a module position from the dropdown box of pre-defined positions or enter your own module position by typing in the name."
+COM_MODULES_FIELD_POSITION_LABEL="Position"
+COM_MODULES_FIELD_SHOWTITLE_DESC="Show/Hide module title on display"
+COM_MODULES_FIELD_SHOWTITLE_LABEL="Show Title"
+COM_MODULES_FIELD_TITLE_DESC="Module must have a title"
+COM_MODULES_FIELD_TITLE_LABEL="Title"
+COM_MODULES_FIELD_NOTE_DESC="Note Desc"
+COM_MODULES_FIELD_NOTE_LABEL="Note"
+COM_MODULES_FIELD_CLIENT_ID_DESC="The type of the module, whether it is for the front-end or back-end. You cannot change this value for the module."
+COM_MODULES_FIELD_CLIENT_ID_LABEL="Type of Module"
 
-MODULES_FIELD_CACHING_DESC="Select whether to cache the content of this module"
-MODULES_FIELD_CACHING_LABEL="Caching"
-MODULES_FIELD_CACHE_TIME_LABEL="Cache time"
-MODULES_FIELD_CACHE_TIME_DESC="The time before the module is recached"
-MODULES_FIELD_MODULECLASS_SFX_DESC="A suffix to be applied to the CSS class of the module. This allows for individual module styling."
-MODULES_FIELD_MODULECLASS_SFX_LABEL="Module Class Suffix"
+COM_MODULES_FIELD_CACHING_DESC="Select whether to cache the content of this module"
+COM_MODULES_FIELD_CACHING_LABEL="Caching"
+COM_MODULES_FIELD_CACHE_TIME_LABEL="Cache time"
+COM_MODULES_FIELD_CACHE_TIME_DESC="The time before the module is recached"
+COM_MODULES_FIELD_MODULECLASS_SFX_DESC="A suffix to be applied to the CSS class of the module. This allows for individual module styling."
+COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Module Class Suffix"
 
-MODULES_MENU_ASSIGNMENT="Menu Assignment"
-MODULES_MODULE_ASSIGN="Module Assignment"
-MODULES_CUSTOM_OUTPUT="Custom output"
-MODULES_MODULE_DESCRIPTION="Module Description"
-MODULES_ERR_XML="Module XML data non available"
+COM_MODULES_MENU_ASSIGNMENT="Menu Assignment"
+COM_MODULES_MENU_SELECTION="Menu Selection"
+COM_MODULES_MODULE_ASSIGN="Module Assignment"
+COM_MODULES_CUSTOM_OUTPUT="Custom output"
+COM_MODULES_MODULE_DESCRIPTION="Module Description"
+COM_MODULES_ERR_XML="Module XML data non available"
 
-MODULES_FIELD_CONTENT_LABEL="Text"
-MODULES_FIELD_CONTENT_DESC="Text"
-MODULES_FIELD_VALUE_NOCACHING="No caching"
+COM_MODULES_FIELD_CONTENT_LABEL="Text"
+COM_MODULES_FIELD_CONTENT_DESC="Text"
+COM_MODULES_FIELD_VALUE_NOCACHING="No caching"
 
-MODULES_FIELD_PUBLISHED_LABEL="Published"
-MODULES_FIELD_PUBLISHED_DESC="If published, this module will display on your site front-end or back-end depending on the module."
-MODULES_FIELD_VALUE_PUBLISHED="Published"
-MODULES_FIELD_VALUE_UNPUBLISHED="Unpublished"
-MODULES_FIELD_PUBLISH_DOWN_DESC="An optional date to finish publishing the module."
-MODULES_FIELD_PUBLISH_DOWN_LABEL="Publish Finish"
-MODULES_FIELD_PUBLISH_UP_DESC="An optional date to start publishing the module."
-MODULES_FIELD_PUBLISH_UP_LABEL="Publish Start"
-
+COM_MODULES_FIELD_PUBLISHED_LABEL="Published"
+COM_MODULES_FIELD_PUBLISHED_DESC="If published, this module will display on your site front-end or back-end depending on the module."
+COM_MODULES_FIELD_VALUE_PUBLISHED="Published"
+COM_MODULES_FIELD_VALUE_UNPUBLISHED="Unpublished"
+COM_MODULES_FIELD_PUBLISH_DOWN_DESC="An optional date to finish publishing the module."
+COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Publish Finish"
+COM_MODULES_FIELD_PUBLISH_UP_DESC="An optional date to start publishing the module."
+COM_MODULES_FIELD_PUBLISH_UP_LABEL="Publish Start"
+COM_MODULES_ERROR_CANNOT_FIND_MODULE="Cannot find module"
+COM_MODULES_ERROR_CANNOT_GET_MODULE="Cannot get module"
