--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Mar-2010 Jean-Marie Simonet
+$^ Refactored com_modules ini/keys, customized item(s)
+
 13-Mar-2010 Hannes Papenberg
 # Fixed mod_menu (Frontend) parameters
 
