$ Refactored com_plugins ini/keys, customized some item(s)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15355 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_plugins.ini
+++ b/administrator/language/en-GB/en-GB.com_plugins.ini
@@ -7,25 +7,27 @@
 COM_PLUGINS="Plugins Manager"
 COM_PLUGINS_XML_DESCRIPTION="This component manages Joomla! plugins"
 COM_PLUGINS_CONFIGURATION="Plug-in Manager Options"
-
-COM_PLUGINS_MANAGER_PLUGINS="Plug-in Manager: Plug-ins"
+COM_PLUGINS_DESCRIPTION="Description"
+COM_PLUGINS_ELEMENT_HEADING="Element"
+COM_PLUGINS_FIELD_ELEMENT_DESC="PLugin folder and main file name"
+COM_PLUGINS_FIELD_ELEMENT_LABEL="Plug-in File"
+COM_PLUGINS_FIELD_ENABLED_DESC="The enabled state of this plugin"
+COM_PLUGINS_FIELD_ENABLED_LABEL="Enabled"
+COM_PLUGINS_FIELD_FOLDER_DESC="Category/folder of plugins this plugin belongs to."
+COM_PLUGINS_FIELD_FOLDER_LABEL="Plug-in Type"
+COM_PLUGINS_FIELD_NAME_DESC="The name of the plugin as defined in its xml"
+COM_PLUGINS_FIELD_NAME_LABEL="Plug-in Name"
+COM_PLUGINS_FOLDER_HEADING="Type"
 COM_PLUGINS_MANAGER_PLUGIN="Plug-in Manager: Plug-in"
-
+COM_PLUGINS_MANAGER_PLUGINS="Plug-in Manager: Plug-ins"
+COM_PLUGINS_NAME_HEADING="Plug-in Name"
 COM_PLUGINS_OPTION_FOLDER="- Select Type -"
 COM_PLUGINS_SEARCH_IN_TITLE="Search in plug-in title."
-
-COM_PLUGINS_ELEMENT_HEADING="Element"
-COM_PLUGINS_FOLDER_HEADING="Type"
-COM_PLUGINS_NAME_HEADING="Plug-in Name"
-
-COM_PLUGINS_XML_DESCRIPTION="Description"
 COM_PLUGINS_XML_ERR="Plugins XML data not available"
-COM_PLUGINS_FIELD_ENABLED_LABEL="Enabled"
-COM_PLUGINS_FIELD_ENABLED_DESC="The enabled state of this plugin"
-COM_PLUGINS_FIELD_NAME_DESC="Plug-in Name Desc"
-COM_PLUGINS_FIELD_NAME_LABEL="Plug-in Name"
-COM_PLUGINS_FIELD_ELEMENT_DESC="Field Element Desc"
-COM_PLUGINS_FIELD_ELEMENT_LABEL="Plug-in File"
-COM_PLUGINS_FIELD_FOLDER_DESC="Field Folder Desc"
-COM_PLUGINS_FIELD_FOLDER_LABEL="Plug-in Type"
 
+; controllers
+COM_PLUGINS_N_PLUGINS_DISABLED="%d plugins successfully disabled"
+COM_PLUGINS_N_PLUGINS_ENABLED="%d plugins successfully enabled"
+COM_PLUGINS_NO_PLUGINS_SELECTED="No plugin selected"
+COM_PLUGINS_PLUGIN_DISABLED="Plugin successfully disabled"
+COM_PLUGINS_PLUGIN_ENABLED="Plugin successfully enabled"
