--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -31,6 +31,7 @@ $ -> Language fix or change
 $^ Refactored com_modules ini/keys, customized item(s)
 $ Standardized mod_toolbar ini/keys
 $ Refactored com_plugins ini/keys, customized some item(s)
+$ Deleting unused com_banners.ini in front-end
 
 13-Mar-2010 Hannes Papenberg
 # Fixed mod_menu (Frontend) parameters
