$ Adding string in com_plugins.ini
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15366 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_plugins.ini
+++ b/administrator/language/en-GB/en-GB.com_plugins.ini
@@ -31,3 +31,4 @@ COM_PLUGINS_N_PLUGINS_ENABLED="%d plugins successfully enabled"
 COM_PLUGINS_NO_PLUGINS_SELECTED="No plugin selected"
 COM_PLUGINS_PLUGIN_DISABLED="Plugin successfully disabled"
 COM_PLUGINS_PLUGIN_ENABLED="Plugin successfully enabled"
+JCONTROLLER_SAVE_SUCCESS="Plugin successfully saved"
