$^ Refactored com_menus inis/keys, customized item(s), + some
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15370 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -58,6 +58,9 @@ JCOMMON_NOINDEX_NOFOLLOW="No index, no follow"
 JCOMMON_AUTO="Auto"
 JCOMMON_ISFREESOFTWARE="%s is free software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
 JCOMMON_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator back-end."
+JCOMMON_REQUIRED_SETTINGS="Required settings"
+JCOMMON_REQUIRED_SETTINGS_DESC="These are required settings"
+CONFIG_METADATA="Metadata configuration"
 
 JCONFIG_PERMISSIONS_LABEL="Permissions"
 JCONFIG_PERMISSIONS_DESC="Default permissions used for all content in this component."
@@ -72,12 +75,8 @@ JINHERIT="Inherit"
 JINHERIT_UNSET="..."
 JCURRENT="Current"
 JSELECT="Select"
-JMODIFY="Modify"
 JGROUPS="Groups"
 JMODIFY="Modify"
-JGROUPS="Groups"
-JMODIFY="Modify"
-JGROUPS="Groups"
 JCLIENT="Client"
 JCANCEL="Cancel"
 JSUBMIT="Submit"
@@ -231,6 +230,7 @@ JOPTION_OPTIONAL="Optional"
 JOPTION_DEFAULT_LANGUAGE="- Default -"
 JOPTION_DO_NOT_USE="- None Selected -"
 JOPTION_SELECT_MENU="- Select menu -"
+JOPTION_UNASSIGNED="Unassigned"
 
 JGRID_MOVE_DOWN="Move Down"
 JGRID_MOVE_UP="Move Up"
@@ -277,6 +277,7 @@ JTOOLBAR_SAVE_AS_COPY="Save as Copy"
 JTOOLBAR_UNINSTALL="Uninstall"
 JTOOLBAR_UNPUBLISH="Unpublish"
 JTOOLBAR_TRASH="Trash"
+JTOOLBAR_REBUILD_SUCCESS="Successfully rebuilt"
 
 JBROWSERTARGET_MODAL="Modal"
 JBROWSERTARGET_NEW="Open in new window"
@@ -447,7 +448,6 @@ ADVANCED_PARAMETERS="Advanced Parameters"
 ALIAS="Alias"
 ALIASTIP="Leave this blank and Joomla! will fill in a default value, which is the title in lower case and with dashes instead of spaces. You may enter the Alias manually. Use lowercase letters and hypens (-). No spaces or underscores are allowed. The Alias will be used in the SEF URL. Default value will be a date and time if the title is typed in non-latin letters."
 ALIGN="Align"
-ALL="all"
 ALPHABETICAL_INDEX="Alphabetical Index"
 ALREADY_EXISTS="There is already a Read more... link that has been inserted. Only one such link is permitted. Use {pagebreak} to split the page up further."
 ALT_TEXT="Alt Text"
@@ -655,7 +655,6 @@ MENU_LINKS_AVAILABLE_WHEN_SAVED="Menu Links are available when saved."
 MENU_MANAGER="Menu Manager"
 MENU_ITEM_MANAGER="Menu Item Manager"
 MENU_SELECTION="Menu Selection"
-MENUS="Menus"
 MESSAGE="Message"
 META_DATA="Metadata"
 METHOD="Method"
