--- a/administrator/language/en-GB/en-GB.com_menus.ini
+++ b/administrator/language/en-GB/en-GB.com_menus.ini
@@ -7,143 +7,138 @@
 COM_MENUS="Menus Manager"
 COM_MENUS_XML_DESCRIPTION="Component for creating menus"
 
-MENUS_ITEMS_SEARCH_FILTER="Search title or alias. Prefix with id: to search for a menu id."
-MENUS_SUBMENU_ITEMS="Menu Items"
-MENUS_SUBMENU_MENUS="Menus"
-
-MENUS_VIEW_NEW_ITEM_TITLE="Menu Manager: New Menu Item"
-MENUS_VIEW_EDIT_ITEM_TITLE="Menu Manager: Edit Menu Item"
-MENUS_VIEW_NEW_MENU_TITLE="Menu Manager: Add Menu"
-MENUS_VIEW_EDIT_MENU_TITLE="Menu Manager: Edit Menu"
-MENUS_VIEW_ITEMS_TITLE="Menu Manager: Menu Items"
-MENUS_VIEW_MENUS_TITLE="Menu Manager: Menus"
-
-MENUS_CHANGE_LINKTYPE="Select"
-
-MENUS_LAYOUT_REQUEST_VARIABLES_DESC="These are required settings added directly to the menu link."
-MENUS_LAYOUT_REQUEST_VARIABLES_LABEL="Required Settings"
-MENUS_LAYOUT_BASIC_OPTIONS_LABEL="Basic Options"
-MENUS_LAYOUT_ADVANCED_OPTIONS_LABEL="Advanced Options"
-MENUS_LAYOUT_MENUTYPE_OPTIONS_LABEL="Menu Type Options"
-
-
-MENUS_LINKTYPE_OPTIONS_LABEL="Page Options"
-COM_MENUS_FIELD_FEEDLINK_LABEL="Feed link"
+COM_MENUS_ADD_TO_THIS_MENU="Add to this menu"
+COM_MENUS_ADVANCED_MENU_OPTIONS="Advanced Menu Options"
+COM_MENUS_BATCH_ACCESS_LABEL="Set Access Level"
+COM_MENUS_BATCH_COPY="Copy"
+COM_MENUS_BATCH_MENU_LABEL="Select Menu or Parent for Move/Copy"
+COM_MENUS_BATCH_MOVE_PARENT_NOT_FOUND="Move parent not found"
+COM_MENUS_BATCH_MOVE_ROW_NOT_FOUND="Move row not found"
+COM_MENUS_BATCH_MOVE="Move"
+COM_MENUS_BATCH_OPTIONS="Batch process the selected menu items"
+COM_MENUS_BATCH_PROCESS="Process"
+COM_MENUS_CHANGE_LINKTYPE="Select"
+COM_MENUS_EDIT_MODULE_SETTINGS="Edit"
+COM_MENUS_ERROR_INSUFFICIENT_BATCH_INFORMATION="Insufficient batch information"
 COM_MENUS_FIELD_FEEDLINK_DESC="Display a feed link for this menu item"
+COM_MENUS_FIELD_FEEDLINK_LABEL="Feed link"
+COM_MENUS_FIELD_VALUE_IGNORE="Ignore"
+COM_MENUS_FIELD_VALUE_NEW_WITH_NAV="New Window With Navigation"
+COM_MENUS_FIELD_VALUE_NEW_WITHOUT_NAV="New Without Navigation"
+COM_MENUS_FIELD_VALUE_PARENT="Parent"
+COM_MENUS_HEADING_ASSIGN_ALL="All"
+COM_MENUS_HEADING_ASSIGN_HIDE="Hide"
+COM_MENUS_HEADING_ASSIGN_IGNORE="Ignore"
+COM_MENUS_HEADING_ASSIGN_MODULE="Module"
+COM_MENUS_HEADING_ASSIGN_POSITION="Position"
+COM_MENUS_HEADING_ASSIGN_SHOW="Show"
+COM_MENUS_HEADING_DISPLAY="Display Setting"
+COM_MENUS_HEADING_EDIT_LINK="Edit Settings"
+COM_MENUS_HEADING_LINKED_MODULES="Modules Linked to the Menu"
+COM_MENUS_HEADING_NUMBER_MENU_ITEMS="Number of Menu Items"
+COM_MENUS_HEADING_PUBLISHED_ITEMS="# Published"
+COM_MENUS_HEADING_TRASHED_ITEMS="# Trashed"
+COM_MENUS_HEADING_UNPUBLISHED_ITEMS="# Unpublished"
+COM_MENUS_ITEM_DETAILS="Details"
+COM_MENUS_ITEM_FIELD_ALIAS_DESC="The alias is used in the URL when SEF is on"
+COM_MENUS_ITEM_FIELD_ANCHOR_CSS_DESC="An optional, custom style to apply to the menu hyperlink."
+COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL="Link CSS Style"
+COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC="An optional, custom description for the title attribute of the menu hyperlink."
+COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL="Link Title Attribute"
+COM_MENUS_ITEM_FIELD_ASSIGNED_DESC="Shows which menu a link will appear in."
+COM_MENUS_ITEM_FIELD_ASSIGNED_LABEL=" Menu Location"
+COM_MENUS_ITEM_FIELD_BROWSERNAV_DESC="BrowserNav Desc"
+COM_MENUS_ITEM_FIELD_BROWSERNAV_LABEL="Target Window"
+COM_MENUS_ITEM_FIELD_HOME_DESC="Sets this menu item as the default or home page of the site. You must have a default page set at all times."
+COM_MENUS_ITEM_FIELD_HOME_LABEL="Default Page"
+COM_MENUS_ITEM_FIELD_LINK_DESC="Link for this menu"
+COM_MENUS_ITEM_FIELD_LINK_LABEL="Link"
+COM_MENUS_ITEM_FIELD_MENU_IMAGE_DESC="Menu Image Desc"
+COM_MENUS_ITEM_FIELD_MENU_IMAGE_LABEL="Menu Image"
+COM_MENUS_ITEM_FIELD_META_DESCRIPTION_DESC="An optional paragraph to be used as the description of the page in the HTML output. This will generally display in the results of search engines."
+COM_MENUS_ITEM_FIELD_META_KEYWORDS_DESC="An optional comma-separated list of keywords and/or phrases to be used in the HTML output."
+COM_MENUS_ITEM_FIELD_NOTE_DESC="Enter some text here"
+COM_MENUS_ITEM_FIELD_PAGE_CLASS_DESC="Optional CSS class to add to elements in this page. This allows CSS styling specific to this page."
+COM_MENUS_ITEM_FIELD_PAGE_CLASS_LABEL="Page Class"
+COM_MENUS_ITEM_FIELD_PAGE_HEADING_DESC="Optional text inside the &quot;h2&quot; tag. If blank, defaults to Page Title."
+COM_MENUS_ITEM_FIELD_PAGE_HEADING_LABEL="Page Heading"
+COM_MENUS_ITEM_FIELD_PAGE_TITLE_DESC="Optional text for the &quot;title&quot; element. If blank, a default value is used based on the Menu Item Type."
+COM_MENUS_ITEM_FIELD_PAGE_TITLE_LABEL="Page Title"
+COM_MENUS_ITEM_FIELD_PARAMS_DESC="Params Desc??"
+COM_MENUS_ITEM_FIELD_PARENT_DESC="Parent Desc"
+COM_MENUS_ITEM_FIELD_PARENT_LABEL="Parent Item"
+COM_MENUS_ITEM_FIELD_SECURE_DESC="Secure Desc"
+COM_MENUS_ITEM_FIELD_SECURE_LABEL="Secure"
+COM_MENUS_ITEM_FIELD_SHOW_PAGE_TITLE_DESC="Whether or not to show the Page Title in the heading of the page."
+COM_MENUS_ITEM_FIELD_SHOW_PAGE_TITLE_LABEL="Show Page Title"
+COM_MENUS_ITEM_FIELD_TEMPLATE_DESC="Select a specific template style for this menu item or use the default template."
+COM_MENUS_ITEM_FIELD_TEMPLATE_LABEL="Template Style"
+COM_MENUS_ITEM_FIELD_TITLE_DESC="The title of the menu item that will display in the menu."
+COM_MENUS_ITEM_FIELD_TITLE_LABEL="Title"
+COM_MENUS_ITEM_FIELD_TYPE_DESC="The type of link: Component, URL, Alias or Separator"
+COM_MENUS_ITEM_FIELD_TYPE_LABEL="Menu Item Type"
+COM_MENUS_ITEM_IS_DEFAULT="Is default"
+COM_MENUS_ITEM_MENUTYPE_DESC="MenuType Desc"
+COM_MENUS_ITEM_MENUTYPE_LABEL="Contained in Menu"
+; in the following string
+; %1$s is for module title, %2$s is for access-title, %3$s is for position
+COM_MENUS_ITEM_MODULE_ACCESS_POSITION="%1$s <small>(%2$s in %3$s)</small>"
+COM_MENUS_ITEM_MODULE_ASSIGNMENT="Module Assignment for this Menu Item"
+COM_MENUS_ITEM_OPTIONS="Menu Item Options"
+COM_MENUS_ITEM_OPTIONS="Options"
+COM_MENUS_ITEMS_SEARCH_FILTER="Search title or alias. Prefix with id: to search for a menu id."
+COM_MENUS_LAYOUT_MENUTYPE_OPTIONS_LABEL="Menu Type Options"
+COM_MENUS_LINKTYPE_OPTIONS_LABEL="Link type options"
+COM_MENUS_LINKTYPE_OPTIONS_LABEL="Page Options"
+COM_MENUS_MENU_DESCRIPTION_DESC="A description about the purpose of the menu."
+COM_MENUS_MENU_DESCRIPTION_LABEL="Description"
+COM_MENUS_MENU_DETAILS="Menu Details"
+COM_MENUS_MENU_MENUTYPE_DESC="The system name of the menu."
+COM_MENUS_MENU_MENUTYPE_LABEL="Menu type"
+COM_MENUS_MENU_TITLE_DESC="The title of the menu to display in the Administrator Menubar and lists."
+COM_MENUS_MENU_TITLE_LABEL="Title"
+COM_MENUS_MODULE_SHOW_ALL="All"
+COM_MENUS_MODULE_SHOW_NONE="None"
+COM_MENUS_MODULE_SHOW_VARIES="Varies"
+COM_MENUS_OPTION_MENU="Menus"
+COM_MENUS_OPTION_SELECT_LEVEL="- Depth -"
+COM_MENUS_REQUIRED_FIELDS_DESC="Required parameters"
+COM_MENUS_REQUIRED_FIELDS_LABEL="Required"
+COM_MENUS_SUBMENU_ITEMS="Menu Items"
+COM_MENUS_SUBMENU_MENUS="Menus"
+COM_MENUS_TITLE_EDIT_ITEM="Menu Manager: Title Edit Item"
+COM_MENUS_TYPE_ALIAS_DESC="Create an alias to another menu item."
+COM_MENUS_TYPE_ALIAS="Menu Item Alias"
+COM_MENUS_TYPE_CHOOSE="Select a Menu Item Type:"
+COM_MENUS_TYPE_EXTERNAL_URL_DESC="An external or internal URL."
+COM_MENUS_TYPE_EXTERNAL_URL="External URL"
+COM_MENUS_TYPE_SEPARATOR_DESC="A text separator."
+COM_MENUS_TYPE_SEPARATOR="Text Separator"
+COM_MENUS_TYPE_SYSTEM_DESC="System Desc"
+COM_MENUS_TYPE_SYSTEM="System Links"
+COM_MENUS_VIEW_EDIT_ITEM_TITLE="Menu Manager: Edit Menu Item"
+COM_MENUS_VIEW_EDIT_MENU_TITLE="Menu Manager: Edit Menu"
+COM_MENUS_VIEW_ITEMS_TITLE="Menu Manager: Menu Items"
+COM_MENUS_VIEW_MENUS_TITLE="Menu Manager: Menus"
+COM_MENUS_VIEW_NEW_ITEM_TITLE="Menu Manager: New Menu Item"
+COM_MENUS_VIEW_NEW_MENU_TITLE="Menu Manager: Add Menu"
+MENUS_LAYOUT_ADVANCED_OPTIONS_LABEL="Advanced Options"
+MENUS_LAYOUT_BASIC_OPTIONS_LABEL="Basic Options"
 
-MENUS_HEADING_PUBLISHED_ITEMS="# Published"
-MENUS_HEADING_TRASHED_ITEMS="# Trashed"
-MENUS_HEADING_UNPUBLISHED_ITEMS="# Unpublished"
-
-MENUS_MENU_DESCRIPTION_LABEL="Description"
-MENUS_MENU_DESCRIPTION_DESC="A description about the purpose of the menu."
-MENUS_MENU_MENUTYPE_DESC="The system name of the menu."
-MENUS_MENU_MENUTYPE_LABEL="Menu type"
-MENUS_MENU_TITLE_DESC="The title of the menu to display in the Administrator Menubar and lists."
-MENUS_MENU_TITLE_LABEL="Title"
-
-MENUS_MENU_DETAILS="Menu Details"
-
-MENUS_HEADING_LINKED_MODULES="Modules Linked to the Menu"
-MENUS_HEADING_NUMBER_MENU_ITEMS="Number of Menu Items"
-
-MENUS_ITEM_ALIAS_DESC="Alias Desc"
-MENUS_ITEM_ANCHOR_CSS_DESC="An optional, custom style to apply to the menu hyperlink."
-MENUS_ITEM_ANCHOR_CSS_LABEL="Link CSS Style"
-MENUS_ITEM_ANCHOR_TITLE_DESC="An optional, custom description for the title attribute of the menu hyperlink."
-MENUS_ITEM_ANCHOR_TITLE_LABEL="Link Title Attribute"
-MENUS_ITEM_BROWSERNAV_DESC="BrowserNav Desc"
-MENUS_ITEM_BROWSERNAV_LABEL="Target Window"
-MENUS_BROWSERNAV_OPTION_NEW_WITHOUT_NAV="New Without Navigation"
-MENUS_BROWSERNAV_OPTION_NEW_WITH_NAV="New Window With Navigation"
-MENUS_BROWSERNAV_OPTION_PARENT="Parent"
-
-MENUS_ITEM_HOME_DESC="Sets this menu item as the default or home page of the site. You must have a default page set at all times."
-MENUS_ITEM_HOME_LABEL="Default Page"
-MENUS_ITEM_IS_DEFAULT="Is default"
-MENUS_ITEM_LINK_DESC="Link Desc"
-MENUS_ITEM_LINK_LABEL="Link"
-MENUS_ITEM_MENUTYPE_DESC="MenuType Desc"
-MENUS_ITEM_MENUTYPE_LABEL="Contained in Menu"
-MENUS_ITEM_MENU_IMAGE_DESC="Menu Image Desc"
-MENUS_ITEM_MENU_IMAGE_LABEL="Menu Image"
-MENUS_ITEM_META_DESCRIPTION_DESC="Meta Description Desc"
-MENUS_ITEM_META_KEYWORDS_DESC="Meta Keywords Desc"
-MENUS_ITEM_PAGE_CLASS_DESC="Optional CSS class to add to elements in this page. This allows CSS styling specific to this page."
-MENUS_ITEM_PAGE_CLASS_LABEL="Page Class"
-MENUS_ITEM_PAGE_TITLE_DESC="Optional text for the &quot;title&quot; element. If blank, a default value is used based on the Menu Item Type."
-MENUS_ITEM_PAGE_TITLE_LABEL="Page Title"
-MENUS_ITEM_PAGE_HEADING_DESC="Optional text inside the &quot;h2&quot; tag. If blank, defaults to Page Title."
-MENUS_ITEM_PAGE_HEADING_LABEL="Page Heading"
-MENUS_ITEM_PARAMS_DESC="Params Desc"
-MENUS_ITEM_PARENT_DESC="Parent Desc"
-MENUS_ITEM_PARENT_LABEL="Parent Item"
-MENUS_MENU_ITEM_ROOT="Top"
-MENUS_ITEM_SECURE_DESC="Secure Desc"
-MENUS_ITEM_SECURE_LABEL="Secure"
-MENUS_ITEM_SHOW_PAGE_TITLE_DESC="Whether or not to show the Page Title in the heading of the page."
-MENUS_ITEM_SHOW_PAGE_TITLE_LABEL="Show Page Title"
-
-MENUS_ITEM_TEMPLATE_DESC="Select a specific template style for this menu item or use the default template."
-MENUS_ITEM_TEMPLATE_LABEL="Template Style"
-MENUS_ITEM_TITLE_DESC="The title of the menu item that will display in the menu."
-MENUS_ITEM_TYPE_DESC="The type of link: Component, URL, Alias or Separator"
-MENUS_ITEM_TYPE_LABEL="Menu Item Type"
-MENUS_ITEM_TITLE_LABEL="Title"
-MENUS_MENU_ASSIGNED_DESC="Shows which menu a link will appear in."
-MENUS_MENU_ASSIGNED_LABEL=" Menu Location"
-
-MENUS_ITEM_DETAILS="Details"
-MENUS_ITEM_OPTIONS="Menu Item Options"
-
-MENUS_TITLE_EDIT_ITEM="Menu Manager: Title Edit Item"
-
-MENUS_ADD_TO_THIS_MENU="Add to this menu"
-
-MENUS_BATCH_ACCESS_LABEL="Set Access Level"
-MENUS_BATCH_COPY="Copy"
-MENUS_BATCH_MENU_LABEL="Select Menu or Parent for Move/Copy"
-MENUS_BATCH_MOVE="Move"
-MENUS_BATCH_OPTIONS="Batch process the selected items"
-MENUS_BATCH_PROCESS="Process"
-MENUS_BATCH_SUCCESS="Batch process completed successfully."
-
-MENUS_ERROR_BATCH_FAILED="Batch process failed with following error: %s"
-
-MENUS_HEADING_ASSIGN_ALL="All"
-MENUS_HEADING_ASSIGN_HIDE="Hide"
-MENUS_HEADING_ASSIGN_IGNORE="Ignore"
-MENUS_HEADING_ASSIGN_MODULE="Module"
-MENUS_HEADING_ASSIGN_POSITION="Position"
-MENUS_HEADING_ASSIGN_SHOW="Show"
-MENUS_ITEM_MODULE_ASSIGNMENT="Module Assignment for this Menu Item"
-MENUS_ITEM_OPTIONS="Options"
-MENUS_ITEM_MODULE_ACCESS_POSITION="%1$s <small>(%2$s in %3$s)</small>"
-
-
-MENU_OPTION_SELECT_LEVEL="- Depth -"
-MENU_OPTION_SELECT_MENUTYPE="- Menu Type -"
-
-
-MENUS_TYPE_ALIAS="Menu Item Alias"
-MENUS_TYPE_ALIAS_DESC="Create an alias to another menu item."
-MENUS_TYPE_EXTERNAL_URL="External URL"
-MENUS_TYPE_EXTERNAL_URL_DESC="An external or internal URL."
-MENUS_TYPE_SEPARATOR="Text Separator"
-MENUS_TYPE_SEPARATOR_DESC="A text separator."
-MENUS_TYPE_SYSTEM="System Links"
-MENUS_TYPE_SYSTEM_DESC="System Desc"
-MENUS_TYPE_CHOOSE="Select a Menu Item Type:"
-
-MENUS_MODULE_SHOW_ALL="All"
-MENUS_MODULE_SHOW_NONE="None"
-MENUS_MODULE_SHOW_VARIES="Varies"
-EDIT_MODULE_SETTINGS="Edit"
-MENUS_HEADING_DISPLAY="Display Setting"
-MENUS_HEADING_EDIT_LINK="Edit Settings"
-MENUS_ADVANCED_MENU_OPTIONS="Advanced Menu Options"
-COM_MENU_ITEM_MODULE_ASSIGNMENT="Module Assignment"
-
-MENUS_MENU_TYPE_NOT_ALLOWED="This is a reserved menutype."
-JCONTROLLER_SAVE_SUCCESS="Menu successfully saved"
-
+; controllers
+COM_MENUS_NO_MENUS_SELECTED="No menu selected"
+COM_MENUS_NO_MENUITEMS_SELECTED="No menu items selected"
+COM_MENUS_MENU_SAVE_SUCCESS="Menu successfully saved"
+COM_MENUS_SAVE_SUCCESS="Menu item successfully saved"
+COM_MENUS_BATCH_SUCCESS="Batch process completed successfully."
+COM_MENUS_ERROR_BATCH_FAILED="Batch process failed with following error: %s"
+COM_MENUS_MENU_DELETED="Menu item successfully deleted"
+COM_MENUS_N_MENUS_DELETED="%d menu items successfully deleted"
+COM_MENUS_SUCCESS_REORDERED="Menu item successfully reordered"
+COM_MENUS_MENU_PUBLISHED="Menu item successfully published"
+COM_MENUS_N_MENUS_PUBLISHED="%d menu items successfully published"
+COM_MENUS_MENU_UNPUBLISHED="Menu item successfully unpublished"
+COM_MENUS_N_MENUS_UNPUBLISHED="%d menu items successfully unpublished"
+COM_MENUS_MENU_TRASHED="Menu item successfully trashed"
+COM_MENUS_N_MENUS_TRASHED="%d menu items successfully trashed"
+COM_MENUS_MENU_TYPE_NOT_ALLOWED="This is a reserved menutype."
