--- a/administrator/language/en-GB/en-GB.com_modules.ini
+++ b/administrator/language/en-GB/en-GB.com_modules.ini
@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MODULES="Modules Manager"
-COM_MODULES_XML_DESCRIPTION="Component for module managment in backend"
+COM_MODULES_XML_DESCRIPTION="Component for module management in backend"
 
 COM_MODULES_CONFIGURATION="Module Manager Options"
 CONFIG_ADVANCED="Advanced configuration"
