--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 14-Mar-2010 Jean-Marie Simonet
 $ Adding string in com_plugins.ini
+$^ Refactored com_menus inis/keys, customized item(s), + some
 
 13-Mar-2010 Jean-Marie Simonet
 $^ Refactored com_modules ini/keys, customized item(s)
