# [19953] Corrected bug in gmail.php
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15373 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+15-Mar-2010 Jean-Marie Simonet
+# [19953] Corrected bug in gmail.php
+
 14-Mar-2010 Ron Severdia
 + First draft of Atomic template with additions from Christian Montoya
 
