--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -27,6 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+16-Mar-2010 Mark Dexter
+# Adjusted tests for changes in core
++ Added new method to count verification errors
+^ Improved message for verification errors to show file and line number
+
 12-Mar 2010 Mark Dexter
 ^ Added new methods to SeleniumJoomlaTestCase (from Matt Thomas)
 
