$^# Refactored com_contact back-end ini/keys (Comp is WIP)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15380 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -60,6 +60,8 @@ JCOMMON_ISFREESOFTWARE="%s is free software released under the <a href="_QQ_"htt
 JCOMMON_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator back-end."
 JCOMMON_REQUIRED_SETTINGS="Required settings"
 JCOMMON_REQUIRED_SETTINGS_DESC="These are required settings"
+JCOMMON_RIGHT="Right"
+JCOMMON_LEFT="Left"
 CONFIG_METADATA="Metadata configuration"
 
 JCONFIG_PERMISSIONS_LABEL="Permissions"
