--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+16-Mar-2010 Jean-Marie Simonet
+$^# Refactored com_contact back-end ini/keys (Comp is WIP)
+
 15-Mar-2010 Jean-Marie Simonet
 # [19953] Corrected bug in gmail.php
 $ Normalized "Category Options" string
