--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 16-Mar-2010 Jean-Marie Simonet
 $^# Refactored com_contact back-end ini/keys (Comp is WIP)
+# Correcting missing doublequotes (15370)
 
 15-Mar-2010 Jean-Marie Simonet
 # [19953] Corrected bug in gmail.php
