--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+16-Mar-2010 Mark Dexter
+^ Update sample data to fix up module display (Elin Waring)
+# Remove section logic from mod_related_items
+
 16-Mar-2010 Jean-Marie Simonet
 $^# Refactored com_contact back-end ini/keys (Comp is WIP)
 # Correcting missing doublequotes (15370)
