# Fixing bug in mod_menu in frontend # Fixing JFilterOutput to pass unittests - Thanks Iszak Bryan! # Fixing JFilterInput to pass unittests - Thanks Iszak Bryan! # Optimizing regular expressions - Thanks Iszak Bryan!
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15399 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,12 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+17-Mar-2010 Hannes Papenberg
+# Fixing bug in mod_menu in frontend
+# Fixing JFilterOutput to pass unittests - Thanks Iszak Bryan!
+# Fixing JFilterInput to pass unittests - Thanks Iszak Bryan!
+# Optimizing regular expressions - Thanks Iszak Bryan!
+
 16-Mar-2010 Mark Dexter
 ^ Update sample data to fix up module display (Elin Waring)
 # Remove section logic from mod_related_items
