# (Hopefully) Fixed bug in JLanguage that broke unittests and some broken language files
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15400 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -32,6 +32,7 @@ $ -> Language fix or change
 # Fixing JFilterOutput to pass unittests - Thanks Iszak Bryan!
 # Fixing JFilterInput to pass unittests - Thanks Iszak Bryan!
 # Optimizing regular expressions - Thanks Iszak Bryan!
+# (Hopefully) Fixed bug in JLanguage that broke unittests and some broken language files
 
 16-Mar-2010 Mark Dexter
 ^ Update sample data to fix up module display (Elin Waring)
