--- a/language/xx-XX/xx-XX.com_content.ini
+++ b/language/xx-XX/xx-XX.com_content.ini
@@ -50,7 +50,7 @@ EDIT_IMAGE="Edit Image"
 EDIT_ITEM="Edit Article"
 EDITOR="Editor"
 EMAIL="E-mail"
-EMAIL_MSG="The following page from the _QQ_%s_QQ_ Web site has been sent to you by %s ( %s ).\n\nYou can access it at the following URL:\n %s"
+EMAIL_MSG="The following page from the "_QQ_"%s"_QQ_" Web site has been sent to you by %s ( %s ).\n\nYou can access it at the following URL:\n %s"
 EMAIL_ERR_NOINFO="You must enter your valid e-mail address and a valid e-mail for the recipient."
 FILTER="Filter"
 FINISH_PUBLISHING="Finish Publishing"
