--- a/language/xx-XX/xx-XX.ini
+++ b/language/xx-XX/xx-XX.ini
@@ -219,7 +219,7 @@ IF_DIFFICULTIES_PERSIST__PLEASE_CONTACT_THE_SYSTEM_ADMINISTRATOR_OF_THIS_SITE="I
 IMAGE="Image"
 ITEMS="items"
 JINVALID_TOKEN="The most recent request was denied because it contained an invalid security token. Please refresh the page and try again."
-JOOMLA_WARNING="<font color=_QQ__QQ__QQ_red_QQ__QQ__QQ_>Joomla! Warning!</font>"
+JOOMLA_WARNING="<font color="_QQ_"red"_QQ_">Joomla! Warning!</font>"
 JPAGE_CURRENT_OF_TOTAL="Page %s of %s"
 LAST="last"
 LAST_UPDATED="Last Updated"
@@ -309,9 +309,9 @@ STORE_FAILED="Store Failed"
 SUBURB="TOWN/SUBURB"
 TASK="Task"
 TEMPLATE_WARN="Template File Not Found! Looking for Template: %s"
-THE_MEMCACHE_EXTENSION_IS_NOT_AVAILABLE="The <abbr title=_QQ__QQ__QQ_memory object caching_QQ__QQ__QQ_>memcache</abbr> Extension is not available"
-THE_APC_EXTENSION_IS_NOT_AVAILABLE="The <abbr title=_QQ__QQ__QQ_Alternative PHP Cache_QQ__QQ__QQ_>APC</abbr> Extension is not available"
-THE_EACCELERATOR_EXTENSION_IS_NOT_AVAILABLE="The  <dfn title=_QQ__QQ__QQ_A free, Open Source, PHP accelerator and dynamic content cache optimiser._QQ__QQ__QQ_>eAccelerator</dfn> Extension is not available"
+THE_MEMCACHE_EXTENSION_IS_NOT_AVAILABLE="The <abbr title="_QQ_"memory object caching"_QQ_">memcache</abbr> Extension is not available"
+THE_APC_EXTENSION_IS_NOT_AVAILABLE="The <abbr title="_QQ_"Alternative PHP Cache"_QQ_">APC</abbr> Extension is not available"
+THE_EACCELERATOR_EXTENSION_IS_NOT_AVAILABLE="The  <dfn title="_QQ_"A free, Open Source, PHP accelerator and dynamic content cache optimiser."_QQ_">eAccelerator</dfn> Extension is not available"
 THE_ITEM="The article"
 THERE_ARE_NO_PARAMETERS_FOR_THIS_ITEM="There are no parameters for this item."
 THE_REQUESTED_RESOURCE_WAS_NOT_FOUND="The requested resource was not found."
