--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+17-Mar-2010 Christophe Demko
+$ Fixing errors in installation/language/en-GB/en-GB.ini
+
 17-Mar-2010 Hannes Papenberg
 # Fixing bug in mod_menu in frontend
 # Fixing JFilterOutput to pass unittests - Thanks Iszak Bryan!
