# Partially fixed bug in ordering in featured articles # Fixed bugs in mod_related_items
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15414 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -37,6 +37,8 @@ $ Fixing errors in installation/language/en-GB/en-GB.ini
 # Optimizing regular expressions - Thanks Iszak Bryan!
 # (Hopefully) Fixed bug in JLanguage that broke unittests and some broken language files
 # Fixed media manager popup - Thanks Artyom Bisyarin
+# Partially fixed bug in ordering in featured articles
+# Fixed bugs in mod_related_items
 
 16-Mar-2010 Mark Dexter
 ^ Update sample data to fix up module display (Elin Waring)
