# Prevented parenting a menu item to its own child - Thanks Jonnathan S. Lima
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15415 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -39,6 +39,7 @@ $ Fixing errors in installation/language/en-GB/en-GB.ini
 # Fixed media manager popup - Thanks Artyom Bisyarin
 # Partially fixed bug in ordering in featured articles
 # Fixed bugs in mod_related_items
+# Prevented parenting a menu item to its own child - Thanks Jonnathan S. Lima
 
 16-Mar-2010 Mark Dexter
 ^ Update sample data to fix up module display (Elin Waring)
