Fixes to mod_articles_category and mod_articles_news (thanks to Angie Radtke)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15424 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/language/en-GB/en-GB.mod_articles_category.ini
+++ b/language/en-GB/en-GB.mod_articles_category.ini
@@ -149,3 +149,12 @@ MOD_ARTICLES_CATEGORY_FIELD_SHOWINTROTEXT_DESC="Select Show if you would like th
 
 MOD_ARTICLES_CATEGORY_FIELD_INTROTEXTLIMIT_LABEL="Introtext Limit"
 MOD_ARTICLES_CATEGORY_FIELD_INTROTEXTLIMIT_DESC="Please enter in a numeric character limit value. The introtext will be trimmed to the number of characters you enter."
+
+MOD_ARTICLES_CATEGORY_TITLE_HEADING="Heading Level"
+MOD_ARTICLES_CATEGORY_TITLE_HEADING_DESCRIPTION="Select the desired HTML tag for the article titles."
+MOD_ARTICLES_CATEGORY_H1="h1"
+MOD_ARTICLES_CATEGORY_H2="h2"
+MOD_ARTICLES_CATEGORY_H3="h3"
+MOD_ARTICLES_CATEGORY_H4="h4"
+MOD_ARTICLES_CATEGORY_H5="h5"
+MOD_ARTICLES_CATEGORY_H6="h6"
