--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+17-Mar-2010 Mark Dexter
+^ Fix up display of mod_articles_category and mod_articles_news (Angie Radtke)
+^ Add heading level param to mod_articles_category and mod_articles_news (Angie Radtke)
+
 17-Mar-2010 Christophe Demko
 $ Fixing errors in installation/language/en-GB/en-GB.ini
 
