Remove Featured Articles Single Category menu item, add category selection to frontpage instead
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15425 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_content.ini
+++ b/administrator/language/en-GB/en-GB.com_content.ini
@@ -83,8 +83,10 @@ CONTENT_ARTICLETEXT_LABEL="Article Text"
 CONTENT_ARTICLETEXT_DESC="CONTENT_ARTICLETEXT_DESC"
 
 CONTENT_BLOG_USE_ARTICLE="Use Article"
-
+COM_CONTENT_FEATURED_CATEGORIES_LABEL="Select Categories"
+COM_CONTENT_FEATURED_CATEGORIES_DESC="Optional list of categories. If selected, only featured articles from the selected categories will show. Use Ctrl+Click to select or unselect."
 JCONTROLLER_SAVE_SUCCESS="Article successfully saved"
+
 
 
 
