--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+22-Mar-2010 Sam Moffatt
+ + Added wincache driver for IIS, thanks to Ruslan from Microsoft
+
 20-Mar-2010 Hannes Papenberg
 # Fixed looping error in JLanguage. Not just the language files were wrong, but this code also. Please don't add this again.
 # Fixed error in JUser to properly load the user data. See unittest.
