Fixing bug in JError
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15549 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+24-Mar-2010 Ian MacLennan
+ # Fixed bug in JError
+
 22-Mar-2010 Sam Moffatt
  + Added wincache driver for IIS, thanks to Ruslan from Microsoft
 
